test/classes/errors/nilability-init-field-dflt/init-field-dflt-oknil-unmanaged-from-oknil-unmanaged.chpl
//  lhs: unmanaged?  rhs: unmanaged?  ok

class MyClass {  var x: int;  }

var rhs: unmanaged MyClass?;

record MyRecord {
  var lhs: unmanaged MyClass? = rhs;
}

var myr = new MyRecord();


